[project]
name = "cookbook"
version = "0.1.0"
description = "Examples and guides for using Hide"
authors = ["Hide Developers"]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["cookbook", "tests"]
venvPath = "."
venv = ".venv"
